samples/_failures_safe/1761443678_3f354d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7a657397.c: In function ‘main’:
./samples/SAFE/__tmp_7a657397.c:163:9: error: expected expression at end of input
  163 |         if (scanf("%d %d %d", &u, &v,
      |         ^~
./samples/SAFE/__tmp_7a657397.c:163:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7a657397.c:163:9: error: expected declaration or statement at end of input
